--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -144,6 +144,5 @@ prospectus.supervisors.same.secondary=Secondary supervisor must be different to 
 prospectus.noadministrator=You must specify a project administrator.
 prospectus.researchOpportunityFeed.duplicate.title=Please provide a unique title.
 
-workflow.configuration.empty=You must provide a workflow configuration.
-workflow.configuration.empty=Your workflow configuration is invalid. Please refer to our API reference.
-workflow.configuration.location.unreachable=The address that you provided is unreachable. Please provide a valid address.
+workflow.configuration.failure=Your workflow configuration failed.
+workflow.configuration.success=Your workflow configuration succeeded.
