Added proper exception handling for state/role transition and refactored role tranistion to cover all of the validation cases.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -144,5 +144,4 @@ prospectus.supervisors.same.secondary=Secondary supervisor must be different to 
 prospectus.noadministrator=You must specify a project administrator.
 prospectus.researchOpportunityFeed.duplicate.title=Please provide a unique title.
 
-workflow.configuration.failure=Your workflow configuration failed.
-workflow.configuration.success=Your workflow configuration succeeded.
+role.transition.failure=The attempted user role transition is invalid.
