Lots of changes to add the update notification functionality and reintroduce resource code.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -144,4 +144,5 @@ prospectus.supervisors.same.secondary=Secondary supervisor must be different to 
 prospectus.noadministrator=You must specify a project administrator.
 prospectus.researchOpportunityFeed.duplicate.title=Please provide a unique title.
 
-role.transition.failure=The attempted user role transition is invalid.
+workflow.configuration.failure=The workflow configuration change that you tried to make is invalid.
+workflow.engine.failure=The action that you tried to perform was invalid.
