Improved form validation, checking not null, not empty and date constraints

--- a/src/main/resources/ValidationMessages_en.properties
+++ b/src/main/resources/ValidationMessages_en.properties
@@ -10,3 +10,8 @@ dropdown.radio.select.none=You must make a selection.
 languageQualification.overallScore.notvalid=You must enter a valid score between 0 and 120 inclusive.
 languageQualification.score.notvalid=You must enter a valid score between 0 and 30 inclusive.
 languageQualification.general.score.notvalid=You must enter a valid numerical score.
+datePast=The date has to be in the past.
+dateNotPast=The date cannot be in the past.
+dateFuture=The date has to be in the future.
+dateNotFuture=The date cannot be in the future.
+dateNotAfterDate=Your start date cannot be after your end date.
